# BasicIDE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ai_fix.py  config.py  create_icon.py  editor.py  enhancements.py  example.html  example.py  file_manager.py  ide.py  main.py  modern_main.py  modern_ui.py  pyproject.toml  requirements.txt  run.py  run_ide.py  run_modern_ide.py  runner.py  setup.py  test_import.py  theme_manager.py  vscode_clone.py
.github/workflows/: ci.yml
docs/features/: visual-code-flow.md
